# webmaster

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  SPEC.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  config.rs  lib.rs  main.rs  skill.rs
src/engines/: bing.rs  google.rs  mod.rs
tests/: test_cli.rs
