[package]
name = "webmaster"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for search engine webmaster tools — sitemap submission, search analytics, URL inspection across Google, Bing, and Yandex"
license = "MIT OR Apache-2.0"
repository = "https://github.com/btakita/webmaster"
keywords = ["seo", "webmaster", "sitemap", "search-console", "bing"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
agent-kit = { path = "../agent-kit", version = "0.1" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
open = "5"
tiny_http = "0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
